test/Fail/NoIrrelevance3.agda
{-# OPTIONS --no-irrelevance #-}

f = λ .x → {!   !}
